--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
     <div class="container">
       <div class="cards">
         <img src="./images/Biryani.jpg" alt="" class="recipe-img" />
-        <h2 class="recipe-title">Biryani</h2>
-        <button class="recipe-btn">Read More</button>
+        <div class="recipe-info">
+          <h2 class="recipe-title">Biryani</h2>
+          <button class="recipe-btn">Read More</button>
+        </div>
       </div>
       <div class="cards">
         <img src="./images/lasagna.jpg" alt="" class="recipe-img" />
-        <h2 class="recipe-title">Lasagna</h2>
-        <button class="recipe-btn">Read More</button>
+        <div class="recipe-info">
+          <h2 class="recipe-title">Lasagna</h2>
+          <button class="recipe-btn">Read More</button>
+        </div>
       </div>
       <div class="cards">
         <img src="./images/STEAK.jpg" alt="" class="recipe-img" />
-        <h2 class="recipe-title">Steak</h2>
-        <button class="recipe-btn">Read More</button>
+        <div class="recipe-info">
+          <h2 class="recipe-title">Steak</h2>
+          <button class="recipe-btn">Read More</button>
+        </div>
       </div>
     </div>
   </body>
