--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img src="./images/Biryani.jpg" alt="" class="recipe-img" />
         <div class="recipe-info">
           <h2 class="recipe-title">Biryani</h2>
+          <div class="line"></div>
           <button class="recipe-btn">Read More</button>
         </div>
       </div>
