index.html updated

--- a/index.html
+++ b/index.html
@@ -10,25 +10,31 @@
   <body>
     <div class="container">
       <div class="cards">
-        <img src="./images/Biryani.jpg" alt="" class="recipe-img" />
-        <div class="recipe-info">
-          <h2 class="recipe-title">Biryani</h2>
-          <div class="line"></div>
-          <button class="recipe-btn">Read More</button>
+        <div class="card-normal">
+          <img src="./images/Biryani.jpg" alt="" class="recipe-img" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Biryani</h2>
+            <div class="line"></div>
+            <button class="recipe-btn">Read More</button>
+          </div>
         </div>
       </div>
       <div class="cards">
-        <img src="./images/lasagna.jpg" alt="" class="recipe-img" />
-        <div class="recipe-info">
-          <h2 class="recipe-title">Lasagna</h2>
-          <button class="recipe-btn">Read More</button>
+        <div class="cardnormL">
+          <img src="./images/lasagna.jpg" alt="" class="recipe-img" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Lasagna</h2>
+            <button class="recipe-btn">Read More</button>
+          </div>
         </div>
       </div>
       <div class="cards">
-        <img src="./images/STEAK.jpg" alt="" class="recipe-img" />
-        <div class="recipe-info">
-          <h2 class="recipe-title">Steak</h2>
-          <button class="recipe-btn">Read More</button>
+        <div class="card-normal">
+          <img src="./images/STEAK.jpg" alt="" class="recipe-img" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Steak</h2>
+            <button class="recipe-btn">Read More</button>
+          </div>
         </div>
       </div>
     </div>
