added popup css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="popup-view">
           <div class="popup-card">
             <a href=""><i class="fas fa-times"></i></a>
-            <div class="foot-img">
+            <div class="food-img">
               <img src="./images/Biryani.jpg" alt="" />
             </div>
             <div class="food-info">
