--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="popup-view">
           <div class="popup-card">
-            <a href=""><i class="fas fa-times"></i></a>
+            <a href=""><i class="close fas fa-times"></i></a>
             <div class="food-img">
               <img src="./images/Biryani.jpg" alt="" />
             </div>
