added card food info css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
               <img src="./images/Biryani.jpg" alt="" />
             </div>
             <div class="food-info">
-              <h2>Biryani</h2>
+              <h2 class="food-name">Biryani</h2>
+              <div class="line_br"></div>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Delectus cumque maiores ex sit eaque minima. Lorem ipsum dolor
