added card details style css

--- a/index.html
+++ b/index.html
@@ -32,11 +32,40 @@
             <div class="food-info">
               <h2 class="food-name">Biryani</h2>
               <div class="line_br"></div>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Delectus cumque maiores ex sit eaque minima. Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Libero, quidem.
-              </p>
+              <ul class="food-details">
+                <li class="detail">
+                  <i class="icon far fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+                <li class="detail">
+                  <i class="icon far fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+                <li class="detail">
+                  <i class="icon far fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+              </ul>
+              <ul class="food-details">
+                <li class="detail">
+                  <i class="icon far fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+                <li class="detail">
+                  <i class="icon far fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+                <li class="detail">
+                  <i class="icon far fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+              </ul>
               <button><a href="">Visit Site</a></button>
             </div>
           </div>
