added card details style-1 css

--- a/index.html
+++ b/index.html
@@ -34,34 +34,34 @@
               <div class="line_br"></div>
               <ul class="food-details">
                 <li class="detail">
-                  <i class="icon far fa-clock"></i>
+                  <i class="icon far fa-2x fa-clock"></i>
                   <h4 class="time">20</h4>
                   <p class="mean-text">minutes</p>
                 </li>
                 <li class="detail">
-                  <i class="icon far fa-clock"></i>
+                  <i class="icon far fa-2x fa-clock"></i>
                   <h4 class="time">20</h4>
                   <p class="mean-text">minutes</p>
                 </li>
                 <li class="detail">
-                  <i class="icon far fa-clock"></i>
+                  <i class="icon far fa-2x fa-clock"></i>
                   <h4 class="time">20</h4>
                   <p class="mean-text">minutes</p>
                 </li>
               </ul>
               <ul class="food-details">
                 <li class="detail">
-                  <i class="icon far fa-clock"></i>
+                  <i class="icon far fa-2x fa-clock"></i>
                   <h4 class="time">20</h4>
                   <p class="mean-text">minutes</p>
                 </li>
                 <li class="detail">
-                  <i class="icon far fa-clock"></i>
+                  <i class="icon far fa-2x fa-clock"></i>
                   <h4 class="time">20</h4>
                   <p class="mean-text">minutes</p>
                 </li>
                 <li class="detail">
-                  <i class="icon far fa-clock"></i>
+                  <i class="icon far fa-2x fa-clock"></i>
                   <h4 class="time">20</h4>
                   <p class="mean-text">minutes</p>
                 </li>
