--- a/index.html
+++ b/index.html
@@ -38,35 +38,35 @@
                   <h4 class="time">20</h4>
                   <p class="mean-text">minutes</p>
                 </li>
-                <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
+                <li class="detail snack">
+                  <i class="icon fas fa-2x fa-pizza-slice"></i>
+                  <!-- <h4 class="time">Snack</h4> -->
+                  <p class="mean-text a">Sanck</p>
                 </li>
-                <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
+                <li class="detail snack">
+                  <i class="icon fa fa-2x fa-utensils"></i>
+                  <!-- <h4 class="time">20</h4> -->
+                  <p class="mean-text a">Healthy</p>
                 </li>
               </ul>
               <ul class="food-details">
                 <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
+                  <i class="fas icon fa-2x fa-fire-alt"></i>
                   <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
+                  <p class="mean-text">calories</p>
                 </li>
                 <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
+                  <i class="fas fa-2x icon fa-weight"></i>
+
+                  <p class="mean-text a">high fat</p>
                 </li>
                 <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
+                  <i class="fas fa-2x icon fa-cookie-bite"></i>
+
+                  <p class="mean-text a">indian</p>
                 </li>
               </ul>
-              <button><a href="">Visit Site</a></button>
+              <button class="visit"><a href="#">Visit Site</a></button>
             </div>
           </div>
         </div>
