--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/354967ed78.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="app.js"></script>
     <title>Recipe App</title>
   </head>
   <body>
@@ -71,7 +72,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="card">
+      <div class="card">
         <div class="cards">
           <img src="./images/lasagna.jpg" alt="" class="recipe-img" />
           <div class="recipe-info">
@@ -79,8 +80,55 @@
             <button class="recipe-btn">Read More</button>
           </div>
         </div>
-      </div> -->
-      <!-- <div class="card">
+        <div class="popup-view">
+          <div class="popup-card">
+            <a href=""><i class="close fas fa-times"></i></a>
+            <div class="food-img">
+              <img src="./images/lasagna.jpg" alt="" />
+            </div>
+            <div class="food-info">
+              <h2 class="food-name">Lasagna</h2>
+              <div class="line_br"></div>
+              <ul class="food-details">
+                <li class="detail">
+                  <i class="icon far fa-2x fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+                <li class="detail snack">
+                  <i class="icon fas fa-2x fa-pizza-slice"></i>
+                  <!-- <h4 class="time">Snack</h4> -->
+                  <p class="mean-text a">Sanck</p>
+                </li>
+                <li class="detail snack">
+                  <i class="icon fa fa-2x fa-utensils"></i>
+                  <!-- <h4 class="time">20</h4> -->
+                  <p class="mean-text a">Healthy</p>
+                </li>
+              </ul>
+              <ul class="food-details">
+                <li class="detail">
+                  <i class="fas icon fa-2x fa-fire-alt"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">calories</p>
+                </li>
+                <li class="detail">
+                  <i class="fas fa-2x icon fa-weight"></i>
+
+                  <p class="mean-text a">high fat</p>
+                </li>
+                <li class="detail">
+                  <i class="fas fa-2x icon fa-cookie-bite"></i>
+
+                  <p class="mean-text a">indian</p>
+                </li>
+              </ul>
+              <button class="visit"><a href="#">Visit Site</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
         <div class="cards">
           <img src="./images/STEAK.jpg" alt="" class="recipe-img" />
           <div class="recipe-info">
@@ -88,7 +136,54 @@
             <button class="recipe-btn">Read More</button>
           </div>
         </div>
-      </div> -->
+        <div class="popup-view">
+          <div class="popup-card">
+            <a href=""><i class="close fas fa-times"></i></a>
+            <div class="food-img">
+              <img src="./images/STEAK.jpg" alt="" />
+            </div>
+            <div class="food-info">
+              <h2 class="food-name">Steak</h2>
+              <div class="line_br"></div>
+              <ul class="food-details">
+                <li class="detail">
+                  <i class="icon far fa-2x fa-clock"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">minutes</p>
+                </li>
+                <li class="detail snack">
+                  <i class="icon fas fa-2x fa-pizza-slice"></i>
+                  <!-- <h4 class="time">Snack</h4> -->
+                  <p class="mean-text a">Sanck</p>
+                </li>
+                <li class="detail snack">
+                  <i class="icon fa fa-2x fa-utensils"></i>
+                  <!-- <h4 class="time">20</h4> -->
+                  <p class="mean-text a">Healthy</p>
+                </li>
+              </ul>
+              <ul class="food-details">
+                <li class="detail">
+                  <i class="fas icon fa-2x fa-fire-alt"></i>
+                  <h4 class="time">20</h4>
+                  <p class="mean-text">calories</p>
+                </li>
+                <li class="detail">
+                  <i class="fas fa-2x icon fa-weight"></i>
+
+                  <p class="mean-text a">high fat</p>
+                </li>
+                <li class="detail">
+                  <i class="fas fa-2x icon fa-cookie-bite"></i>
+
+                  <p class="mean-text a">indian</p>
+                </li>
+              </ul>
+              <button class="visit"><a href="#">Visit Site</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
