--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="popup-view">
           <div class="popup-card">
-            <a href=""><i class="close fas fa-times"></i></a>
+            <a href="#"><i class="close fas fa-times"></i></a>
             <div class="food-img">
               <img src="./images/Biryani.jpg" alt="" />
             </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="popup-view">
           <div class="popup-card">
-            <a href=""><i class="close fas fa-times"></i></a>
+            <a href="#"><i class="close fas fa-times"></i></a>
             <div class="food-img">
               <img src="./images/lasagna.jpg" alt="" />
             </div>
@@ -138,7 +138,7 @@
         </div>
         <div class="popup-view">
           <div class="popup-card">
-            <a href=""><i class="close fas fa-times"></i></a>
+            <a href="#"><i class="close fas fa-times"></i></a>
             <div class="food-img">
               <img src="./images/STEAK.jpg" alt="" />
             </div>
