--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <title>Recipe App</title>
   </head>
   <body>
+    <div class="form">
+      <form>
+        <input class="input" type="text" placeholder="Type your dish here" />
+        <button class="input-button">Submit</button>
+      </form>
+    </div>
     <div class="container">
       <div class="card">
         <div class="cards">
