frontEnd js revamp

--- a/index.html
+++ b/index.html
@@ -20,126 +20,6 @@
         <button class="input-button">Submit</button>
       </form>
     </div>
-    <div class="container">
-      <div class="card">
-        <div class="cards">
-          <img src="./images/Biryani.jpg" alt="" class="recipe-img" />
-          <div class="recipe-info">
-            <h2 class="recipe-title">Biryani</h2>
-            <div class="line"></div>
-            <button class="recipe-btn">Read More</button>
-          </div>
-        </div>
-        <div class="popup-view">
-          <div class="popup-card">
-            <a href="#"><i class="close fas fa-times"></i></a>
-            <div class="food-img">
-              <img src="./images/Biryani.jpg" alt="" />
-            </div>
-            <div class="food-info">
-              <h2 class="food-name">Biryani</h2>
-              <div class="line_br"></div>
-              <ul class="food-details">
-                <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
-                </li>
-                <li class="detail">
-                  <i class="fas icon fa-2x fa-fire-alt"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">calories</p>
-                </li>
-                <li class="detail">
-                  <i class="fas fa-2x icon fa-weight"></i>
-
-                  <p class="mean-text a">high fat</p>
-                </li>
-              </ul>
-
-              <button class="visit"><a href="#">Visit Site</a></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="cards">
-          <img src="./images/lasagna.jpg" alt="" class="recipe-img" />
-          <div class="recipe-info">
-            <h2 class="recipe-title">Lasagna</h2>
-            <button class="recipe-btn">Read More</button>
-          </div>
-        </div>
-        <div class="popup-view">
-          <div class="popup-card">
-            <a href="#"><i class="close fas fa-times"></i></a>
-            <div class="food-img">
-              <img src="./images/lasagna.jpg" alt="" />
-            </div>
-            <div class="food-info">
-              <h2 class="food-name">Lasagna</h2>
-              <div class="line_br"></div>
-              <ul class="food-details">
-                <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
-                </li>
-                <li class="detail">
-                  <i class="fas icon fa-2x fa-fire-alt"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">calories</p>
-                </li>
-                <li class="detail">
-                  <i class="fas fa-2x icon fa-weight"></i>
-
-                  <p class="mean-text a">high fat</p>
-                </li>
-              </ul>
-              <button class="visit"><a href="#">Visit Site</a></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="cards">
-          <img src="./images/STEAK.jpg" alt="" class="recipe-img" />
-          <div class="recipe-info">
-            <h2 class="recipe-title">Steak</h2>
-            <button class="recipe-btn">Read More</button>
-          </div>
-        </div>
-        <div class="popup-view">
-          <div class="popup-card">
-            <a href="#"><i class="close fas fa-times"></i></a>
-            <div class="food-img">
-              <img src="./images/STEAK.jpg" alt="" />
-            </div>
-            <div class="food-info">
-              <h2 class="food-name">Steak</h2>
-              <div class="line_br"></div>
-              <ul class="food-details">
-                <li class="detail">
-                  <i class="icon far fa-2x fa-clock"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">minutes</p>
-                </li>
-                <li class="detail">
-                  <i class="fas icon fa-2x fa-fire-alt"></i>
-                  <h4 class="time">20</h4>
-                  <p class="mean-text">calories</p>
-                </li>
-                <li class="detail">
-                  <i class="fas fa-2x icon fa-weight"></i>
-
-                  <p class="mean-text a">high fat</p>
-                </li>
-              </ul>
-              <button class="visit"><a href="#">Visit Site</a></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="container"></div>
   </body>
 </html>
