--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="form">
       <form>
         <input class="input" type="text" placeholder="Type your dish here" />
-        <button class="input-button">Submit</button>
+        <!-- <button class="input-button">Submit</button> -->
       </form>
     </div>
     <div class="container"></div>
